[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/d9464-arkhip_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/AC6sD6GnnYs.jpg" type="Texture" id=2]
[ext_resource path="res://Data/GoodCastle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Data/BadCastle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Data/Main.gd" type="Script" id=5]
[ext_resource path="res://Data/Bad.gd" type="Script" id=6]
[ext_resource path="res://Data/Good.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 200
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 1.0
margin_right = 3842.0
margin_bottom = 2149.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="Bad" type="Node2D" parent="."]
position = Vector2( 2, 1 )
script = ExtResource( 6 )

[node name="BadCastle" parent="Bad" instance=ExtResource( 4 )]
position = Vector2( 1799, 902 )
collision_mask = 2

[node name="SpawnPos" type="Position2D" parent="Bad"]
position = Vector2( 1879, 959 )

[node name="SpawnPos2" type="Position2D" parent="Bad"]
position = Vector2( 1879, 926 )

[node name="SpawnPos3" type="Position2D" parent="Bad"]
position = Vector2( 1879, 942 )

[node name="CD" type="Timer" parent="Bad"]

[node name="CD2" type="Timer" parent="Bad"]

[node name="Label" type="Label" parent="Bad"]
margin_left = 1518.0
margin_top = 71.0
margin_right = 1898.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Money" type="Timer" parent="Bad"]

[node name="Button" type="Button" parent="Bad"]
margin_left = 1615.0
margin_top = 578.0
margin_right = 1909.0
margin_bottom = 691.0
custom_fonts/font = SubResource( 4 )
text = "Summon"

[node name="Button2" type="Button" parent="Bad"]
margin_left = 1615.0
margin_top = 442.0
margin_right = 1909.0
margin_bottom = 555.0
custom_fonts/font = SubResource( 4 )
text = "Ability"

[node name="Good" type="Node2D" parent="."]
position = Vector2( 1, -5 )
script = ExtResource( 7 )

[node name="GoodCastle" parent="Good" instance=ExtResource( 3 )]
position = Vector2( 5, 914 )
collision_layer = 2

[node name="SpawnPos" type="Position2D" parent="Good"]
position = Vector2( 36, 931 )

[node name="SpawnPos3" type="Position2D" parent="Good"]
position = Vector2( 36, 917 )

[node name="SpawnPos2" type="Position2D" parent="Good"]
position = Vector2( 36, 950 )

[node name="CD" type="Timer" parent="Good"]

[node name="Timer" type="Timer" parent="Good"]

[node name="Button" type="Button" parent="."]
margin_left = 879.0
margin_top = 6.0
margin_right = 994.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="TileMap2" type="TileMap" parent="."]
format = 1

[node name="Result" type="Label" parent="."]
margin_left = 692.0
margin_top = 4.0
margin_right = 1650.0
margin_bottom = 584.0
custom_fonts/font = SubResource( 3 )

[connection signal="death_bad" from="Bad/BadCastle" to="." method="_on_BadCastle_death_bad"]
[connection signal="timeout" from="Bad/CD" to="Bad" method="_on_CD_timeout"]
[connection signal="timeout" from="Bad/CD2" to="Bad" method="_on_CD2_timeout"]
[connection signal="timeout" from="Bad/Money" to="Bad" method="_on_Money_timeout"]
[connection signal="pressed" from="Bad/Button" to="Bad" method="_on_Button_pressed"]
[connection signal="pressed" from="Bad/Button2" to="Bad" method="_on_Button2_pressed"]
[connection signal="death_good" from="Good/GoodCastle" to="." method="_on_GoodCastle_death_good"]
[connection signal="hit" from="Good/GoodCastle" to="Good" method="_on_GoodCastle_hit"]
[connection signal="timeout" from="Good/CD" to="Good" method="_on_CD_timeout"]
[connection signal="timeout" from="Good/Timer" to="Good" method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
